name:             hspec-wai
version:          0.3.0.1
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2014 Fujimura Daisuke,
                  (c) 2014 Simon Hengel
author:           Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
maintainer:       Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
synopsis:         Experimental Hspec support for testing WAI applications (depends on hspec2!)
description:      Experimental Hspec support for testing WAI applications (depends on hspec2!)

source-repository head
  type: git
  location: https://github.com/hspec/hspec-wai

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Wai
      Test.Hspec.Wai.Internal
      Test.Hspec.Wai.JSON
  other-modules:
      Test.Hspec.Wai.Util
      Test.Hspec.Wai.Matcher
  build-depends:
      base == 4.*
    , bytestring
    , text
    , transformers
    , case-insensitive
    , http-types
    , wai >= 3
    , wai-extra >= 3
    , hspec2
    , template-haskell
    , aeson
    , aeson-qq >= 0.7.2

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , bytestring
    , text
    , transformers
    , case-insensitive
    , http-types
    , wai
    , wai-extra
    , hspec2

    , hspec-meta

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  hs-source-dirs:
      test
  build-depends:
      base    == 4.*
    , doctest >= 0.9.4.1

test-suite README
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -pgmL markdown-unlit
  main-is:
      README.lhs
  build-depends:
      base == 4.*
    , markdown-unlit
    , hspec2
    , hspec-wai
    , http-types
    , aeson
    , wai
    , scotty
