name:             hspec-wai
version:          0.6.2
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2014 Fujimura Daisuke,
                  (c) 2014 Simon Hengel
author:           Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
maintainer:       Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
synopsis:         Experimental Hspec support for testing WAI applications
description:      Experimental Hspec support for testing WAI applications

source-repository head
  type: git
  location: https://github.com/hspec/hspec-wai

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Wai
      Test.Hspec.Wai.Internal
  other-modules:
      Test.Hspec.Wai.Util
      Test.Hspec.Wai.Matcher
  build-depends:
      base == 4.*
    , bytestring >= 0.10
    , text
    , transformers
    , case-insensitive
    , http-types
    , wai >= 3
    , wai-extra >= 3
    , hspec-core == 2.*
    , hspec-expectations

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , bytestring
    , text
    , transformers
    , case-insensitive
    , http-types
    , wai
    , wai-extra
    , hspec-core
    , hspec-expectations

    , hspec
    , QuickCheck
