name:             hspec-wai-json
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Wai.JSON
  build-depends:
      base == 4.*
    , bytestring
    , template-haskell
    , aeson
    , aeson-qq
    , hspec-wai

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  hs-source-dirs:
      test
  build-depends:
      base    == 4.*
    , doctest >= 0.9.4.1
