name:             hspec-wai-json
version:          0.5.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2014 Fujimura Daisuke,
                  (c) 2014 Simon Hengel
author:           Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
maintainer:       Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
synopsis:         Testing JSON APIs with hspec-wai
description:      Testing JSON APIs with hspec-wai

source-repository head
  type: git
  location: https://github.com/hspec/hspec-wai

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Wai.JSON
  build-depends:
      base == 4.*
    , hspec-wai == 0.5.*
    , bytestring
    , template-haskell
    , aeson
    , aeson-qq >= 0.7.3

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , hspec-wai-json
    , hspec-wai
    , hspec2
